--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGODB_URI='mongodb+srv://zaidiqbal17:zaid123@bg-remover.xtys5xg.mongodb.net'
+CLERK_WEBHOOK_SECRET ='whsec_3uUjmqsD/d0+l9ReTvqYyoxPv8PnM0Dr'
